--- a/contact.html
+++ b/contact.html
@@ -15,15 +15,15 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            background-color: #fff; /* 设置导航栏背景颜色 */
-            padding: 10px 20px; /* 设置导航栏内边距 */
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 添加阴影效果 */
+            background-color: #fff;  
+            padding: 10px 20px;  
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);  
         }
 
         .nav-item {
-            margin-right: 20px; /* 设置导航项之间的间距 */
-            text-decoration: none; /* 去除链接下划线 */
-            color: #333; /* 设置导航项文字颜色 */
+            margin-right: 20px;  
+            text-decoration: none;  
+            color: #333;  
         }
 
         .content {
@@ -36,46 +36,46 @@
         }
 
         #searchInput {
-            padding: 5px; /* 设置输入框内边距 */
-            margin-right: 10px; /* 设置输入框与按钮之间的间距 */
+            padding: 5px;  
+            margin-right: 10px;  
         }
 
         #searchButton, #clearButton {
-            padding: 5px 10px; /* 设置按钮内边距 */
-            border: none; /* 去除按钮边框 */
-            background-color: #007bff; /* 设置按钮背景颜色 */
-            color: #fff; /* 设置按钮文字颜色 */
-            cursor: pointer; /* 设置鼠标悬停样式为手型 */
+            padding: 5px 10px;  
+            border: none;  
+            background-color: #007bff;  
+            color: #fff;  
+            cursor: pointer;  
         }
 
         #searchButton:hover, #clearButton:hover {
-            background-color: #0056b3; /* 设置按钮悬停时的背景颜色 */
+            background-color: #0056b3;  
         }
 
         .contact-form label {
-            display: block; /* 将 label 设置为块级元素，使其独占一行 */
-            margin-bottom: 5px; /* 设置 label 之间的垂直间距 */
+            display: block;  
+            margin-bottom: 5px;  
         }
 
         .contact-form input[type="text"],
         .contact-form input[type="email"],
         .contact-form textarea {
-            width: 100%; /* 让输入框和文本域占满容器的宽度 */
-            padding: 8px; /* 设置输入框和文本域的内边距 */
-            margin-bottom: 10px; /* 设置输入框和文本域之间的垂直间距 */
-            box-sizing: border-box; /* 让 padding 不会增加元素的实际宽度 */
+            width: 100%;  
+            padding: 8px;  
+            margin-bottom: 10px;  
+            box-sizing: border-box;  
         }
 
         .contact-form button[type="submit"] {
-            padding: 10px 20px; /* 设置提交按钮的内边距 */
-            background-color: #007bff; /* 设置按钮背景颜色 */
-            color: #fff; /* 设置按钮文字颜色 */
-            border: none; /* 去除按钮边框 */
-            cursor: pointer; /* 设置鼠标悬停样式为手型 */
+            padding: 10px 20px;  
+            background-color: #007bff;  
+            color: #fff;  
+            border: none;  
+            cursor: pointer;  
         }
 
         .contact-form button[type="submit"]:hover {
-            background-color: #0056b3; /* 设置按钮悬停时的背景颜色 */
+            background-color: #0056b3;  
         }
     </style>
 </head>
